LIVIJUKU-751: Raportointi, kuvaajat ja exportit: Desimaalierottimet pilkuiksi pisteen sijaan

--- a/app/scripts/views/tunnusluvut/raportit-omakuvaaja.html
+++ b/app/scripts/views/tunnusluvut/raportit-omakuvaaja.html
@@ -44,7 +44,7 @@
     <nvd3 options='chart.options' data='data[chartid]' api="params.charts[chartid].api"></nvd3>
 
     <a ng-csv="csv[chartid]" class="pull-right view-link"
-       filename="tunnuslukudata.csv"
+       filename="tunnuslukudata.csv" decimal-separator=","
        field-separator=";" add-bom="true"><span class="glyphicon glyphicon-save"></span> Lataa CSV
     </a>
   </div>
