--- a/app/scripts/views/tunnusluvut/raportit-tunnuslukukuvaajat.html
+++ b/app/scripts/views/tunnusluvut/raportit-tunnuslukukuvaajat.html
@@ -18,7 +18,7 @@
     </div>
     <div class="col-md-2 lataacsv">
       <a ng-csv="exportCsvMultibar(tyytyvaisyysData())"
-         filename="Tyytyväisyys_joukkoliikenteeseen.csv"
+         filename="Tyytyväisyys_joukkoliikenteeseen.csv" decimal-separator=","
          csv-label="true" field-separator=";" add-bom="true"><span class="glyphicon glyphicon-save"></span> Lataa CSV
       </a>
     </div>
@@ -32,7 +32,7 @@
     </div>
     <div class="col-md-2 lataacsv">
       <a ng-csv="exportCsvMultibar(tuotantokustannusData())"
-         filename="Tuotantokustannus.csv"
+         filename="Tuotantokustannus.csv" decimal-separator=","
          csv-label="true" field-separator=";" add-bom="true"><span class="glyphicon glyphicon-save"></span> Lataa CSV
       </a>
     </div>
@@ -46,7 +46,7 @@
     </div>
     <div class="col-md-2 lataacsv">
       <a ng-csv="exportCsvMultibar(tyytyvaisyysData())"
-         filename="Tyytyväisyys_joukkoliikenteeseen.csv"
+         filename="Tyytyväisyys_joukkoliikenteeseen.csv" decimal-separator=","
          csv-label="true" field-separator=";" add-bom="true"><span class="glyphicon glyphicon-save"></span> Lataa CSV
       </a>
     </div>
@@ -60,7 +60,7 @@
     </div>
     <div class="col-md-2 lataacsv">
       <a ng-csv="exportCsvMultibar(psaMatkustajatData())"
-         filename="PSA_matkusajat.csv"
+         filename="PSA_matkusajat.csv" decimal-separator=","
          csv-label="true" field-separator=";" add-bom="true"><span class="glyphicon glyphicon-save"></span> Lataa CSV
       </a>
     </div>
@@ -74,7 +74,7 @@
     </div>
     <div class="col-md-2 lataacsv">
       <a ng-csv="exportCsvMultibar(siirtymaajanMatkustajatData())"
-         filename="Siirtymaajan_matkustajat.csv"
+         filename="Siirtymaajan_matkustajat.csv" decimal-separator=","
          csv-label="true" field-separator=";" add-bom="true"><span class="glyphicon glyphicon-save"></span> Lataa CSV
       </a>
     </div>
@@ -92,7 +92,7 @@
     </div>
     <div class="col-md-2 lataacsv">
       <a ng-csv="exportCsvMultibar(tyytyvaisyysData())"
-         filename="Tyytyväisyys_joukkoliikenteeseen.csv"
+         filename="Tyytyväisyys_joukkoliikenteeseen.csv" decimal-separator=","
          csv-label="true" field-separator=";" add-bom="true"><span class="glyphicon glyphicon-save"></span> Lataa CSV
       </a>
     </div>
@@ -107,7 +107,7 @@
     </div>
     <div class="col-md-2 lataacsv">
       <a ng-csv="exportCsvMultibar(tyytyvaisyysData())"
-         filename="Tyytyväisyys_joukkoliikenteeseen.csv"
+         filename="Tyytyväisyys_joukkoliikenteeseen.csv" decimal-separator=","
          csv-label="true" field-separator=";" add-bom="true"><span class="glyphicon glyphicon-save"></span> Lataa CSV
       </a>
     </div>
@@ -122,7 +122,7 @@
     </div>
     <div class="col-md-2 lataacsv">
       <a ng-csv="exportCsvMultibar(tyytyvaisyysData())"
-         filename="Tyytyväisyys_joukkoliikenteeseen.csv"
+         filename="Tyytyväisyys_joukkoliikenteeseen.csv" decimal-separator=","
          csv-label="true" field-separator=";" add-bom="true"><span class="glyphicon glyphicon-save"></span> Lataa CSV
       </a>
     </div>
@@ -137,7 +137,7 @@
     </div>
     <div class="col-md-2 lataacsv">
       <a ng-csv="exportCsvMultibar(tyytyvaisyysData())"
-         filename="Tyytyväisyys_joukkoliikenteeseen.csv"
+         filename="Tyytyväisyys_joukkoliikenteeseen.csv" decimal-separator=","
          csv-label="true" field-separator=";" add-bom="true"><span class="glyphicon glyphicon-save"></span> Lataa CSV
       </a>
     </div>
@@ -155,7 +155,7 @@
     </div>
     <div class="col-md-2 lataacsv">
       <a ng-csv="exportCsvMultibar(tyytyvaisyysData())"
-         filename="Tyytyväisyys_joukkoliikenteeseen.csv"
+         filename="Tyytyväisyys_joukkoliikenteeseen.csv" decimal-separator=","
          csv-label="true" field-separator=";" add-bom="true"><span class="glyphicon glyphicon-save"></span> Lataa CSV
       </a>
     </div>
@@ -170,7 +170,7 @@
     </div>
     <div class="col-md-2 lataacsv">
       <a ng-csv="exportCsvMultibar(tyytyvaisyysData())"
-         filename="Tyytyväisyys_joukkoliikenteeseen.csv"
+         filename="Tyytyväisyys_joukkoliikenteeseen.csv" decimal-separator=","
          csv-label="true" field-separator=";" add-bom="true"><span class="glyphicon glyphicon-save"></span> Lataa CSV
       </a>
     </div>
@@ -185,7 +185,7 @@
     </div>
     <div class="col-md-2 lataacsv">
       <a ng-csv="exportCsvMultibar(tyytyvaisyysData())"
-         filename="Tyytyväisyys_joukkoliikenteeseen.csv"
+         filename="Tyytyväisyys_joukkoliikenteeseen.csv" decimal-separator=","
          csv-label="true" field-separator=";" add-bom="true"><span class="glyphicon glyphicon-save"></span> Lataa CSV
       </a>
     </div>
@@ -200,7 +200,7 @@
     </div>
     <div class="col-md-2 lataacsv">
       <a ng-csv="exportCsvMultibar(tyytyvaisyysData())"
-         filename="Tyytyväisyys_joukkoliikenteeseen.csv"
+         filename="Tyytyväisyys_joukkoliikenteeseen.csv" decimal-separator=","
          csv-label="true" field-separator=";" add-bom="true"><span class="glyphicon glyphicon-save"></span> Lataa CSV
       </a>
     </div>
@@ -215,7 +215,7 @@
     </div>
     <div class="col-md-2 lataacsv">
       <a ng-csv="exportCsvMultibar(tyytyvaisyysData())"
-         filename="Tyytyväisyys_joukkoliikenteeseen.csv"
+         filename="Tyytyväisyys_joukkoliikenteeseen.csv" decimal-separator=","
          csv-label="true" field-separator=";" add-bom="true"><span class="glyphicon glyphicon-save"></span> Lataa CSV
       </a>
     </div>
@@ -230,7 +230,7 @@
     </div>
     <div class="col-md-2 lataacsv">
       <a ng-csv="exportCsvMultibar(tyytyvaisyysData())"
-         filename="Tyytyväisyys_joukkoliikenteeseen.csv"
+         filename="Tyytyväisyys_joukkoliikenteeseen.csv" decimal-separator=","
          csv-label="true" field-separator=";" add-bom="true"><span class="glyphicon glyphicon-save"></span> Lataa CSV
       </a>
     </div>
