LIVIJUKU-738 - joukkoliikennetuki ladataan vain jos lajitunnus = KS3

--- a/app/scripts/views/tunnusluvut/muokkaus-ttyt.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-ttyt.html
@@ -449,7 +449,7 @@
         </table>
       </div>
     </juku-form-row>
-    <juku-form-row ng-if="organisaatio.lajitunnus === 'KS3'">
+    <juku-form-row ng-if="tunnusluvut.joukkoliikennetuki">
       <div class="table-responsive">
         <table class="table table-hover table-condensed">
           <thead>
