--- a/app/scripts/views/tunnusluvut/raportit-valtionavustuskuvaajat.html
+++ b/app/scripts/views/tunnusluvut/raportit-valtionavustuskuvaajat.html
@@ -24,15 +24,27 @@
        csv-label="true" field-separator=";" add-bom="true" decimal-separator=","><span class="glyphicon glyphicon-save"></span> Lataa CSV
     </a>
   </div>
-
+  <br>
   <div class="row">
+    <form id="avustustyyppi-valinta-form" name="avustustyyppi-valinta-form" class="form-inline tunnusluku-filter-form">
+      <div class="form-group">
+        <label for="avustustyyppi" class="radio inline control-label">Valitse avustustieto jota halutaan tarkastella organisaatioittain:</label>
+        <label class="radio-inline">
+          <input type="radio" name="avustustyyppi" id="avustustyyppi-h" value="H" ng-model="avustustyyppi"> Haettu avustus
+        </label>
+        <label class="radio-inline">
+          <input type="radio" name="avustustyyppi" id="avustustyyppi-m" value="M" ng-model="avustustyyppi"> Myönnetty avustus
+        </label>
+      </div>
+    </form>
+
     <nvd3 options='avustusdetail.options' data='avustusdetail.data' api="avustusdetail.api"></nvd3>
     <a ng-csv="exportCsvMultibar(haettuMyonnettyData())" class="pull-right view-link"
        filename="Myönnetyt_jaoteltuna.csv"
        csv-label="true" field-separator=";" add-bom="true" decimal-separator=","><span class="glyphicon glyphicon-save"></span> Lataa CSV
     </a>
   </div>
-
+  <br>
   <div class="row">
     <nvd3 options='myonnettyPerAsukasOptions' data='myonnettyPerAsukasData' api="myonnettyPerAsukasApi"></nvd3>
     <a ng-csv="exportCsvMultibar(myonnettyPerAsukasData())" class="pull-right view-link"
