LIVIJUKU-743 - Myönnetty avustus / asukas kuvaaja käyttöliittymään

--- a/app/scripts/views/tunnusluvut/raportit-valtionavustuskuvaajat.html
+++ b/app/scripts/views/tunnusluvut/raportit-valtionavustuskuvaajat.html
@@ -46,7 +46,7 @@
   </div>
   <br>
   <div class="row">
-    <nvd3 options='myonnettyPerAsukasOptions' data='myonnettyPerAsukasData' api="myonnettyPerAsukasApi"></nvd3>
+    <nvd3 options='avustusperasukas.options' data='avustusperasukas.data' api="avustusperasukas.api"></nvd3>
     <a ng-csv="exportCsvMultibar(myonnettyPerAsukasData())" class="pull-right view-link"
        filename="Myönnetty_asukas.csv"
        csv-label="true" field-separator=";" add-bom="true" decimal-separator=","><span class="glyphicon glyphicon-save"></span> Lataa CSV
